--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Tools</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Tools to support the IoT secure DevOps process Methodology</h6>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Tools for support the IoT secure DevOps process Methodology</h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Access to the tools used in the SCRATCh Methodology</p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="https://selgert.nl/req_tool/scratch_toolkit" class="btn item-btn btn-black display-7">Start Now &gt;</a></div>
